@@ -11,6 +11,9 @@
 </head>
 {% load i18n %}
 <body>
+	<div style="background: #EFEFEF; padding: 12px; border-bottom: 4px solid #808080;">
+  	{% trans "This is a very simple demo of the Google AppEngine branch of the open-source project" %} <a style="color: blue;" href="http://code.google.com/p/django-profile">django-profile</a>. {% trans "It's designed to provide an easy-to-install user profile panel which can be integrated on your django-gae application" %}.
+	</div>
 	<div class="content">
 		<div class="header">
 			<ul class="menu">
